<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">In Class 2a</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_1_txt">Euro(EUR)</string>
    <string name="button_2_txt">Canadian Dollar(CAD)</string>
    <string name="button_3_txt">British Pound(GBP)</string>
    <string name="button_4_txt">Japanese Yen(JPY)</string>
    <string name="button_5_txt">Clear All</string>
    <string name="hint1">Amount (USD)</string>
    <string name="hint2">Result:</string>

</resources>
